[package]
name = "apex-jump"
version = "0.0.2"
edition = "2024"
description = "A WebSocket proxy for the CRG Scoreboard. Functions as both a library and a binary."
license-file = "LICENSE"
keywords = ["derby", "crg", "scoreboard", "websockets", "proxy"]
authors = [
    "Charlie Humphreys <charlie.mel.humphreys@gmail.com",
]
repository = "https://github.com/nashvillerollerderby/apex-jump"
homepage = "https://github.com/nashvillerollerderby/apex-jump"

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "proxy"
path = "src/proxy.rs"

[features]
write-enabled = []
static-files = ["actix-files"]

[dependencies]
actix-files = { version = "0.6.10", optional = true }
actix-web = "4.13.0"
actix-ws = "0.4.0"
clap = { version = "4.6.1", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
log = "0.4.29"
log4rs = { version = "1.4.0", features = ["serde"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
tokio-stream = "0.1.18"
tungstenite = "0.29.0"
uuid = { version = "1.23.1", features = ["v4"] }
futures-util = "0.3.32"
tokio-tungstenite = "0.29.0"
tokio-util = "0.7.18"
tokio = "1.52.1"
