[package]
name = "apex-jump"
version = "0.2.0"
edition = "2024"
description = "A WebSocket proxy for the CRG Scoreboard. Functions as both a library and a binary."
license-file = "LICENSE"
keywords = ["derby", "crg", "scoreboard", "websockets", "proxy"]
authors = [
    "Charlie Humphreys <charlie.mel.humphreys@gmail.com",
]
repository = "https://github.com/nashvillerollerderby/apex-jump"
homepage = "https://github.com/nashvillerollerderby/apex-jump"

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "apex-jump"
path = "src/proxy.rs"

[[bin]]
name = "apex-jump-fileserver"
path = "src/proxy.rs"
required-features = ["static-files"]

[features]
static-files = []

[dependencies]
axum = { version = "0.8.9", features = ["macros", "ws"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
clap = { version = "4.6.1", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
futures-util = "0.3.32"
headers = "0.4.1"
log = "0.4.29"
log4rs = { version = "1.4.0", features = ["serde"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
tokio-stream = "0.1.18"
tungstenite = "0.29.0"
uuid = { version = "1.23.1", features = ["v4"] }
tokio = { version = "1.52.1", features = ["full"] }
tokio-tungstenite = "0.29.0"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
cfg-if = "1.0.4"
